--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,7 +1,7 @@
 {% if recent_qs %}
     <ul>
     {% for q in recent_qs %}
-        <li><a href="/polls/{{ q.id }}/">{{ q.question_text }}</a></li>
+        <li><a href="{% url 'detail' q.id %}">{{ q.question_text }}</a></li>
     {% endfor %}
     </ul>
 {% else %}
